syntax = "proto3";
package service.types.v2;
import "pkg/types/v1/object.proto";
import "service/types/v1/uploader.proto";
import "service/types/v1/stone_hub.proto";
option go_package = "github.com/bnb-chain/greenfield-storage-provider/service/types/v2";

message TestProtoLint {
  uint64 object_id = 1;
  bytes tx_hash = 2;
  string storage_provider_id = 3;
  uint32 piece_count = 4;
  pkg.types.v1.RedundancyType redundancy_type = 5;
}
